// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSONSchemaRenderer should handle nested objects 1`] = `
<dl
  className="json-schema-renderer"
>
  <div
    className="object-renderer-a"
  >
    <h2>
      a
    </h2>
    <div>
      <div
        className="text-renderer text-renderer-b"
      >
        <dt>
          b
        </dt>
        <dd>
          Producer
        </dd>
      </div>
    </div>
  </div>
</dl>
`;

exports[`JSONSchemaRenderer should render 1`] = `
<dl
  className="json-schema-renderer"
/>
`;

exports[`JSONSchemaRenderer should render arrays 1`] = `
<dl
  className="json-schema-renderer"
>
  <div
    className="array-renderer-a"
  >
    <dt>
      Metal deposit
    </dt>
    <dd>
      b
    </dd>
    <dd>
      d
    </dd>
    <dd>
      f
    </dd>
  </div>
</dl>
`;

exports[`JSONSchemaRenderer should render strings and integers 1`] = `
<dl
  className="json-schema-renderer"
>
  <div
    className="text-renderer text-renderer-a"
  >
    <dt>
      mobile Fish
    </dt>
    <dd>
      Trace
    </dd>
  </div>
  <div
    className="text-renderer text-renderer-b"
  >
    <dt>
      Home Loan Account Table Computer
    </dt>
    <dd>
      33370
    </dd>
  </div>
</dl>
`;
